[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-detector"
version = "0.1.0"
description = "Wireless honeypot detector using Scapy and Rich"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "scapy>=2.5.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/MehmetnC1"
Repository = "https://github.com/MehmetnC1"
Issues = "https://github.com/MehmetnC1"

[project.scripts]
honeypot-detector = "honeypot_detector:main"

[tool.setuptools]
py-modules = ["honeypot_detector"]